--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "wp-nuxt",
-  "version": "1.0.0",
-  "description": "Headless WordPress with Nuxt",
-  "author": "geoffgraham and sdras",
-  "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
-  "dependencies": {
-    "axios": "^0.19.0",
-    "lozad": "^1.16.0",
-    "nuxt": "^2.0.0"
-  },
-  "devDependencies": {
-    "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.0"
-  }
+	"name": "switch-fe",
+	"version": "1.0.0",
+	"description": "Switch FE Exercise",
+	"author": "jonza after geoffgraham and sdras",
+	"private": true,
+	"scripts": {
+		"dev": "nuxt",
+		"build": "nuxt build",
+		"start": "nuxt start",
+		"generate": "nuxt generate"
+	},
+	"dependencies": {
+		"axios": "^0.19.0",
+		"lozad": "^1.16.0",
+		"nuxt": "^2.0.0"
+	},
+	"devDependencies": {
+		"node-sass": "^4.13.1",
+		"sass-loader": "^8.0.0"
+	}
 }
