--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
 	},
 	"devDependencies": {
 		"node-sass": "^4.13.1",
-		"sass-loader": "^8.0.0"
+		"sass-loader": "^8.0.0",
+		"serialize-javascript": ">=3.1.0",
+		"yargs-parser": ">=5.0.0-security.0",
+		"minimist": ">=1.2.3",
+		"kind-of": ">=6.0.3"
 	}
 }
